chore: import maven-compiler-plugin with mapstruct